--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       <button class="download-button">Download</button>
       <button class="apply-button">Apply on company website</button>
       <button class="save-button">Save</button>
+      <button class="stretch-button">Stretch</button>
+      <button class="shadow-button">Shadow</button>
+      <button class="s-button">One</button>
+      <button class="s-button">Two</button>
+      <button class="s-button">Three</button>
     </div>
   </body>
 </html>
