new stylesheet, text practice

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>HTML Practising v2</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
     <header>
@@ -32,6 +33,17 @@
       <button class="s-button">One</button>
       <button class="s-button">Two</button>
       <button class="s-button">Three</button>
+    </div>
+    <div class="texts">
+      <p class="video-title">
+        Talking Tech and AI witch Google CEO Sundar Pichai!
+      </p>
+      <p class="video-stats">3.4M views &#183; 6 months ago</p>
+      <p class="video-author">Marques Brownlee &#10003;</p>
+      <p class="video-description">
+        Talking tech and AI on the heels of Google I/O. Also a daily driver
+        phone reveal from Google's CEO. Shoutout to Sundar!
+      </p>
     </div>
   </body>
 </html>
