images and textboxes excercises

--- a/index.html
+++ b/index.html
@@ -45,5 +45,25 @@
         phone reveal from Google's CEO. Shoutout to Sundar!
       </p>
     </div>
+
+    <div class="images">
+      <img class="cat1" src="img/cat.jpg">
+      <img class="cat2" src="img/cat.jpg">
+      <img class="cat3" src="img/cat.jpg">
+    </div>
+
+    <div class="textboxes">
+      <input class="s1" type="text" placeholder="Search">
+      <input class="s2" type="text" placeholder="Search Google or type a URL"><br>
+      <p class="label">E-mail</p>
+      <input class="s3" type="text" >
+      <p class="disclaimer"> By clicking Agree & Join, you agree to the Privacy Policy.</p>
+      <button class="agreejoin-button">Agree & Join</button><br>
+      <div class="tweetdiv">
+      <img class="cat4" src="img/cat.jpg">
+      <input class="s4" type="text" placeholder="What's happening?">
+      <button class="tweet-button">Tweet</button></div>
+    </div>
+
   </body>
 </html>
