css display property

--- a/index.html
+++ b/index.html
@@ -47,23 +47,53 @@
     </div>
 
     <div class="images">
-      <img class="cat1" src="img/cat.jpg">
-      <img class="cat2" src="img/cat.jpg">
-      <img class="cat3" src="img/cat.jpg">
+      <img class="cat1" src="img/cat.jpg" />
+      <img class="cat2" src="img/cat.jpg" />
+      <img class="cat3" src="img/cat.jpg" />
     </div>
 
     <div class="textboxes">
-      <input class="s1" type="text" placeholder="Search">
-      <input class="s2" type="text" placeholder="Search Google or type a URL"><br>
+      <input class="s1" type="text" placeholder="Name" />
+      <input class="s1" type="text" placeholder="Email" />
+      <img class="google-img" src="img/Google.png" />
+      <input
+        class="s2"
+        type="text"
+        placeholder="Search Google or type a URL"
+      /><br />
       <p class="label">E-mail</p>
-      <input class="s3" type="text" >
-      <p class="disclaimer"> By clicking Agree & Join, you agree to the Privacy Policy.</p>
-      <button class="agreejoin-button">Agree & Join</button><br>
+      <input class="s3" type="text" />
+      <p class="disclaimer">
+        By clicking Agree & Join, you agree to the Privacy Policy.
+      </p>
+      <button class="agreejoin-button">Agree & Join</button><br />
       <div class="tweetdiv">
-      <img class="cat4" src="img/cat.jpg">
-      <input class="s4" type="text" placeholder="What's happening?">
-      <button class="tweet-button">Tweet</button></div>
-    </div>
+        <img class="cat4" src="img/cat.jpg" />
+        <input class="s4" type="text" placeholder="What's happening?" />
+        <button class="tweet-button">Tweet</button>
+      </div>
+      <p class="thanks">
+        Thanks for chatting with our cutomer support. Would you like to take our
+        quick survey?
+      </p>
+      <button class="yes-no">Yes</button><button class="yes-no">No</button
+      ><br />
+      <div class="signup-form">
+        <input class="s5" type="text" placeholder="First name" />
+        <input class="s5" type="text" placeholder="Surname" />
+        <input class="s6" type="text" placeholder="E-mail" />
+        <button class="signup-button2">Sign Up</button>
+      </div>
+      <div class="request-a-ride-form">
+        <p class="request-text">Request a ride now</p>
+        <input class="s7" type="text" placeholder="Enter pickup location" />
+        <input class="s7" type="text" placeholder="Enter destination" />
 
+        <div>
+          <button class="request-button">Request now</button>
+          <button class="schedule-button">Schedule for later</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
