--- a/youtube.html
+++ b/youtube.html
@@ -7,5 +7,8 @@
   <body>
     <input class="search-bar" type="text" placeholder="Search">
     <img class="thumbnail" src="img/thumbnail-1.webp" alt="Zdjęcie osoby x i y"> 
+    <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+    <p class="video-author">Marques Brownlee</p>
+    <p class="video-stats">3.4M views &#183; 6 months ago</p>
   </body>
 </html>
