--- a/index.html
+++ b/index.html
@@ -55,12 +55,17 @@
     <div class="textboxes">
       <input class="s1" type="text" placeholder="Name" />
       <input class="s1" type="text" placeholder="Email" />
+      
       <img class="google-img" src="img/Google.png" />
       <input
         class="s2"
         type="text"
         placeholder="Search Google or type a URL"
-      /><br />
+      />
+      <button class="google-button">Google search</button>
+      <button class="google-button">I'm Feeling Lucky</button>
+      
+      <br />
       <p class="label">E-mail</p>
       <input class="s3" type="text" />
       <p class="disclaimer">
@@ -93,6 +98,39 @@
           <button class="request-button">Request now</button>
           <button class="schedule-button">Schedule for later</button>
         </div>
+      </div>
+    </div>
+
+    <div class="divs">
+      <div class="red-square"></div>
+      <div class="green-circle"></div><br/>
+      <div class="satisfied">
+        <p>Satisfied with our service?</p>
+        <button class="yes-no">Yes</button><button class="yes-no">No</button>
+      </div>
+
+      <div class="yt-music">
+        <p class="yt-music-title">Install YouTube Music</p>
+        <p class="yt-music-description">Add Youtube Music to your desktop for quick and easy access</p>
+      </div> <br/>
+
+      <div class="pet-friend">
+        <img class="cat2" src="img/cat.jpg" />
+        <p class="pet-name">Oliver</p>
+        <p class="mutual-friends">2 mutual friends</p>
+        <button class="add-friend">Add Friend</button>
+      </div>
+      <div class="pet-friend">
+        <img class="cat2" src="img/cat.jpg" />
+        <p class="pet-name">Mimi</p>
+        <p class="mutual-friends">3 mutual friends</p>
+        <button class="add-friend">Add Friend</button>
+      </div>
+      <div class="pet-friend">
+        <img class="cat2" src="img/cat.jpg" />
+        <p class="pet-name">Rex</p>
+        <p class="mutual-friends">4 mutual friends</p>
+        <button class="add-friend">Add Friend</button>
       </div>
     </div>
   </body>
