--- a/youtube.html
+++ b/youtube.html
@@ -5,10 +5,30 @@
     <link rel="stylesheet" href="yt.css" />
   </head>
   <body>
-    <input class="search-bar" type="text" placeholder="Search">
-    <img class="thumbnail" src="img/thumbnail-1.webp" alt="Zdjęcie osoby x i y"> 
-    <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-    <p class="video-author">Marques Brownlee</p>
-    <p class="video-stats">3.4M views &#183; 6 months ago</p>
+    <input class="search-bar" type="text" placeholder="Search" />
+    <div class="video-preview">
+      <img
+        class="thumbnail"
+        src="img/thumbnail-1.webp"
+        alt="Zdjęcie osoby x i y"
+      />
+      <p class="video-title">
+        Talking Tech and AI with Google CEO Sundar Pichai!
+      </p>
+      <p class="video-author">Marques Brownlee</p>
+      <p class="video-stats">3.4M views &#183; 6 months ago</p>
+    </div>
+    <div class="video-preview">
+        <img
+          class="thumbnail"
+          src="img/thumbnail-2.webp"
+          alt="Zdjęcie osoby smiejącej się z napisem don't laugh"
+        />
+        <p class="video-title">
+          Try not to laugh challenge #9
+        </p>
+        <p class="video-author">Markiplier</p>
+        <p class="video-stats">19M views &#183; 4 years ago</p>
+      </div>
   </body>
 </html>
