--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>HTML Practising v2</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style3.css" />
   </head>
   <body>
     <header>
@@ -55,16 +56,12 @@
     <div class="textboxes">
       <input class="s1" type="text" placeholder="Name" />
       <input class="s1" type="text" placeholder="Email" />
-      
+
       <img class="google-img" src="img/Google.png" />
-      <input
-        class="s2"
-        type="text"
-        placeholder="Search Google or type a URL"
-      />
+      <input class="s2" type="text" placeholder="Search Google or type a URL" />
       <button class="google-button">Google search</button>
       <button class="google-button">I'm Feeling Lucky</button>
-      
+
       <br />
       <p class="label">E-mail</p>
       <input class="s3" type="text" />
@@ -103,7 +100,8 @@
 
     <div class="divs">
       <div class="red-square"></div>
-      <div class="green-circle"></div><br/>
+      <div class="green-circle"></div>
+      <br />
       <div class="satisfied">
         <p>Satisfied with our service?</p>
         <button class="yes-no">Yes</button><button class="yes-no">No</button>
@@ -111,26 +109,114 @@
 
       <div class="yt-music">
         <p class="yt-music-title">Install YouTube Music</p>
-        <p class="yt-music-description">Add Youtube Music to your desktop for quick and easy access</p>
-      </div> <br/>
+        <p class="yt-music-description">
+          Add Youtube Music to your desktop for quick and easy access
+        </p>
+      </div>
+      <br />
 
-      <div class="pet-friend">
-        <img class="cat2" src="img/cat.jpg" />
-        <p class="pet-name">Oliver</p>
-        <p class="mutual-friends">2 mutual friends</p>
-        <button class="add-friend">Add Friend</button>
+      <div class="pet-friends">
+        <div class="pet-friend">
+          <div><img class="cat2" src="img/cat.jpg" /></div>
+          <div class="pet-info">
+            <p class="pet-name">Oliver</p>
+            <p class="mutual-friends">2 mutual friends</p>
+            <button class="add-friend">Add Friend</button>
+          </div>
+        </div>
+        <div class="pet-friend">
+          <div><img class="cat2" src="img/cat.jpg" /></div>
+          <div class="pet-info">
+            <p class="pet-name">Mimi</p>
+            <p class="mutual-friends">3 mutual friends</p>
+            <button class="add-friend">Add Friend</button>
+          </div>
+        </div>
+        <div class="pet-friend">
+          <div><img class="cat2" src="img/cat.jpg" /></div>
+          <div class="pet-info">
+            <p class="pet-name">Rex</p>
+            <p class="mutual-friends">4 mutual friends</p>
+            <button class="add-friend">Add Friend</button>
+          </div>
+        </div>
       </div>
-      <div class="pet-friend">
-        <img class="cat2" src="img/cat.jpg" />
-        <p class="pet-name">Mimi</p>
-        <p class="mutual-friends">3 mutual friends</p>
-        <button class="add-friend">Add Friend</button>
+    </div>
+
+    <div class="layouts">
+      <div class="follow-cats">
+        <div class="follow-cat">
+          <div class="profile-picture"><img class="cat4" src="img/cat.jpg" /></div>
+          <div class="profile-info">
+            <p class="name">oliver</p>
+            <p class="animal">the cat</p>
+            <p class="description">Popular</p>
+          </div>
+          <div class="profile-follow"><button class="follow-button">Follow</button></div>
+        </div>
+        <div class="follow-cat">
+          <div class="profile-picture"><img class="cat4" src="img/cat.jpg" /></div>
+          <div class="profile-info">
+            <p class="name">Mimi</p>
+            <p class="animal">Sleepy Kitty</p>
+            <p class="description">Popular</p>
+          </div>
+          <div class="profile-follow"><button class="follow-button">Follow</button></div>
+        </div>
+        <div class="follow-cat">
+          <div class="profile-picture"><img class="cat4" src="img/cat.jpg" /></div>
+          <div class="profile-info">
+            <p class="name">Rex</p>
+            <p class="animal">Happy Bulldog</p>
+            <p class="description">Popular</p>
+          </div>
+          <div class="profile-follow"><button class="follow-button">Follow</button></div>
+        </div>
       </div>
-      <div class="pet-friend">
-        <img class="cat2" src="img/cat.jpg" />
-        <p class="pet-name">Rex</p>
-        <p class="mutual-friends">4 mutual friends</p>
-        <button class="add-friend">Add Friend</button>
+
+      <div class="yt-list">
+        <div class="yt-film">
+          <div class="thumbnail">
+            <img
+              class="thumbnail-photo"
+              src="img/thumbnail-1.webp"
+              alt="Zdjęcie osoby x i y"
+            />
+          </div>
+          <div class="video-info2">
+            <p class="video-title2">How to compete againt CS degrees (as a self-taught dev)</p>
+            <p class="video-author2">SuperSimpleDev</p>
+            <p class="video-stats2">1.5K views &#183; 4 months ago</p>
+          </div>
+        </div>
+        <div class="yt-film">
+          <div class="thumbnail">
+            <img
+              class="thumbnail-photo"
+              src="img/thumbnail-1.webp"
+              alt="Zdjęcie osoby x i y"
+            />
+          </div>
+          <div class="video-info2">
+            <p class="video-title2">How to compete againt CS degrees (as a self-taught dev)</p>
+            <p class="video-author2">SuperSimpleDev</p>
+            <p class="video-stats2">1.5K views &#183; 4 months ago</p>
+          </div>
+        </div>
+        <div class="yt-film">
+          <div class="thumbnail">
+            <img
+            class="thumbnail-photo"
+            src="img/thumbnail-1.webp"
+            alt="Zdjęcie osoby x i y"
+          />
+          </div>
+          <div class="video-info2">
+            <p class="video-title2">How to compete againt CS degrees (as a self-taught dev)</p>
+            <p class="video-author2">SuperSimpleDev</p>
+            <p class="video-stats2">1.5K views &#183; 4 months ago</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
