--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <button class="s-button">Two</button>
       <button class="s-button">Three</button>
     </div>
+
     <div class="texts">
       <p class="video-title">
         Talking Tech and AI witch Google CEO Sundar Pichai!
@@ -218,6 +219,10 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="grids">
+      
     </div>
   </body>
 </html>
