--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <div class="pet-friends">
         <div class="pet-friend">
-          <div><img class="cat2" src="img/cat.jpg" /></div>
+          <div><img class="cat5" src="img/cat.jpg" /></div>
           <div class="pet-info">
             <p class="pet-name">Oliver</p>
             <p class="mutual-friends">2 mutual friends</p>
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="pet-friend">
-          <div><img class="cat2" src="img/cat.jpg" /></div>
+          <div><img class="cat5" src="img/cat.jpg" /></div>
           <div class="pet-info">
             <p class="pet-name">Mimi</p>
             <p class="mutual-friends">3 mutual friends</p>
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="pet-friend">
-          <div><img class="cat2" src="img/cat.jpg" /></div>
+          <div><img class="cat5" src="img/cat.jpg" /></div>
           <div class="pet-info">
             <p class="pet-name">Rex</p>
             <p class="mutual-friends">4 mutual friends</p>
@@ -142,6 +142,7 @@
           </div>
         </div>
       </div>
+
     </div>
 
     <div class="layouts">
@@ -222,7 +223,25 @@
     </div>
 
     <div class="grids">
-      
+      <div class="grid1">
+        <div style="background-color: lightblue;">200px</div>
+        <div style="background-color: lightpink;">75px</div>
+      </div>
+      <div class="grid2">
+        <div style="background-color: lightblue;">col1</div>
+        <div style="background-color: lightpink;">col2</div>
+        <div style="background-color: lightblue;">col3</div>
+      </div>
+      <div class="grid3">
+        <div style="background-color: lightblue;">col1</div>
+        <div style="background-color: lightpink;">col2</div>
+        <div style="background-color: lightblue;">col3</div>
+        <div style="background-color: lightpink;">col4</div>
+        <div style="background-color: lightblue;">col1</div>
+        <div style="background-color: lightpink;">col2</div>
+        <div style="background-color: lightblue;">col3</div>
+        <div style="background-color: lightpink;">col4</div>        
+      </div>
     </div>
   </body>
 </html>
