--- a/youtube.html
+++ b/youtube.html
@@ -13,46 +13,136 @@
   <body>
     <input class="search-bar" type="text" placeholder="Search" />
 
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img
-          class="thumbnail"
-          src="img/thumbnail-1.webp"
-          alt="Zdjęcie osoby x i y"
-        />
+    <div class="video-grid">
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-1.webp"
+            alt="Zdjęcie osoby x i y"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-1.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views &#183; 6 months ago</p>
+          </div>
+        </div>
       </div>
 
-      <div>
-        <div class="channel-photo">
-          <img class="profile-photo" src="img/channel-1.jpeg" />
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-2.webp"
+            alt="Zdjęcie osoby smiejącej się"
+          />
         </div>
-        <div class="video-info">
-          <p class="video-title">
-            Talking Tech and AI with Google CEO Sundar Pichai!
-          </p>
-          <p class="video-author">Marques Brownlee</p>
-          <p class="video-stats">3.4M views &#183; 6 months ago</p>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-2.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img
-          class="thumbnail"
-          src="img/thumbnail-2.webp"
-          alt="Zdjęcie osoby smiejącej się"
-        />
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-1.webp"
+            alt="Zdjęcie osoby x i y"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-1.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views &#183; 6 months ago</p>
+          </div>
+        </div>
       </div>
 
-      <div>
-        <div class="channel-photo">
-          <img class="profile-photo" src="img/channel-2.jpeg" />
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-2.webp"
+            alt="Zdjęcie osoby smiejącej się"
+          />
         </div>
-        <div class="video-info">
-          <p class="video-title">Try Not To Laugh Challenge #9</p>
-          <p class="video-author">Markiplier</p>
-          <p class="video-stats">19M views &#183; 4 years ago</p>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-2.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-1.webp"
+            alt="Zdjęcie osoby x i y"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-1.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views &#183; 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-2.webp"
+            alt="Zdjęcie osoby smiejącej się"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-2.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
         </div>
       </div>
     </div>
