--- a/index.html
+++ b/index.html
@@ -142,37 +142,48 @@
           </div>
         </div>
       </div>
-
     </div>
 
     <div class="layouts">
       <div class="follow-cats">
         <div class="follow-cat">
-          <div class="profile-picture"><img class="cat4" src="img/cat.jpg" /></div>
+          <div class="profile-picture">
+            <img class="cat4" src="img/cat.jpg" />
+          </div>
           <div class="profile-info">
             <p class="name">oliver</p>
             <p class="animal">the cat</p>
             <p class="description">Popular</p>
           </div>
-          <div class="profile-follow"><button class="follow-button">Follow</button></div>
+          <div class="profile-follow">
+            <button class="follow-button">Follow</button>
+          </div>
         </div>
         <div class="follow-cat">
-          <div class="profile-picture"><img class="cat4" src="img/cat.jpg" /></div>
+          <div class="profile-picture">
+            <img class="cat4" src="img/cat.jpg" />
+          </div>
           <div class="profile-info">
             <p class="name">Mimi</p>
             <p class="animal">Sleepy Kitty</p>
             <p class="description">Popular</p>
           </div>
-          <div class="profile-follow"><button class="follow-button">Follow</button></div>
+          <div class="profile-follow">
+            <button class="follow-button">Follow</button>
+          </div>
         </div>
         <div class="follow-cat">
-          <div class="profile-picture"><img class="cat4" src="img/cat.jpg" /></div>
+          <div class="profile-picture">
+            <img class="cat4" src="img/cat.jpg" />
+          </div>
           <div class="profile-info">
             <p class="name">Rex</p>
             <p class="animal">Happy Bulldog</p>
             <p class="description">Popular</p>
           </div>
-          <div class="profile-follow"><button class="follow-button">Follow</button></div>
+          <div class="profile-follow">
+            <button class="follow-button">Follow</button>
+          </div>
         </div>
       </div>
 
@@ -186,7 +197,9 @@
             />
           </div>
           <div class="video-info2">
-            <p class="video-title2">How to compete againt CS degrees (as a self-taught dev)</p>
+            <p class="video-title2">
+              How to compete againt CS degrees (as a self-taught dev)
+            </p>
             <p class="video-author2">SuperSimpleDev</p>
             <p class="video-stats2">1.5K views &#183; 4 months ago</p>
           </div>
@@ -200,7 +213,9 @@
             />
           </div>
           <div class="video-info2">
-            <p class="video-title2">How to compete againt CS degrees (as a self-taught dev)</p>
+            <p class="video-title2">
+              How to compete againt CS degrees (as a self-taught dev)
+            </p>
             <p class="video-author2">SuperSimpleDev</p>
             <p class="video-stats2">1.5K views &#183; 4 months ago</p>
           </div>
@@ -208,13 +223,15 @@
         <div class="yt-film">
           <div class="thumbnail">
             <img
-            class="thumbnail-photo"
-            src="img/thumbnail-1.webp"
-            alt="Zdjęcie osoby x i y"
-          />
+              class="thumbnail-photo"
+              src="img/thumbnail-1.webp"
+              alt="Zdjęcie osoby x i y"
+            />
           </div>
           <div class="video-info2">
-            <p class="video-title2">How to compete againt CS degrees (as a self-taught dev)</p>
+            <p class="video-title2">
+              How to compete againt CS degrees (as a self-taught dev)
+            </p>
             <p class="video-author2">SuperSimpleDev</p>
             <p class="video-stats2">1.5K views &#183; 4 months ago</p>
           </div>
@@ -224,23 +241,100 @@
 
     <div class="grids">
       <div class="grid1">
-        <div style="background-color: lightblue;">200px</div>
-        <div style="background-color: lightpink;">75px</div>
+        <div style="background-color: lightblue">200px</div>
+        <div style="background-color: lightpink">75px</div>
       </div>
       <div class="grid2">
-        <div style="background-color: lightblue;">col1</div>
-        <div style="background-color: lightpink;">col2</div>
-        <div style="background-color: lightblue;">col3</div>
+        <div style="background-color: lightblue">col1</div>
+        <div style="background-color: lightpink">col2</div>
+        <div style="background-color: lightblue">col3</div>
       </div>
       <div class="grid3">
-        <div style="background-color: lightblue;">col1</div>
-        <div style="background-color: lightpink;">col2</div>
-        <div style="background-color: lightblue;">col3</div>
-        <div style="background-color: lightpink;">col4</div>
-        <div style="background-color: lightblue;">col1</div>
-        <div style="background-color: lightpink;">col2</div>
-        <div style="background-color: lightblue;">col3</div>
-        <div style="background-color: lightpink;">col4</div>        
+        <div style="background-color: lightblue">col1</div>
+        <div style="background-color: lightpink">col2</div>
+        <div style="background-color: lightblue">col3</div>
+        <div style="background-color: lightpink">col4</div>
+        <div style="background-color: lightblue">col1</div>
+        <div style="background-color: lightpink">col2</div>
+        <div style="background-color: lightblue">col3</div>
+        <div style="background-color: lightpink">col4</div>
+      </div>
+    </div>
+
+    <div class="flexboxes">
+      <div class="flexbox">
+        <div style="background-color: lightblue">div1 tekst tekst</div>
+        <div style="background-color: lightpink">div2 <p>tekst tekst</p> </div>
+      </div>
+
+      <div class="flexbox">
+        <div style="background-color: lightblue; width: 100px">100px</div>
+        <div style="background-color: lightpink; flex: 1;">flex: 1 </div>
+      </div>
+
+      <div class="flexbox">
+        <div style="background-color: lightblue; width: 100px">100px</div>
+        <div style="background-color: lightpink; flex: 1;">flex: 1</div>
+        <div style="background-color: lightblue; flex: 2;">flex 2</div>
+      </div>
+
+      <div class="flex-header">
+        <div style="background-color: lightblue; width: 100px">100px</div>
+        <div style="background-color: lightpink; width: 100px">100px</div>
+        <div style="background-color: lightblue; width: 100px">100px</div>
+      </div>
+
+      <div class="flexbox">
+        <div style="background-color: lightblue; width: 200px">200px</div>
+        <div style="background-color: lightpink; width: 75px">75px </div>
+      </div>
+
+      <div class="flexbox">
+        <div style="background-color: lightblue; width: 50px">item1</div>
+        <div style="background-color: lightpink; flex: 1;">item2</div>
+        <div style="background-color: lightblue; width: 75px;">item3</div>
+      </div>
+
+      <div class="flexbox" style="justify-content:space-between;">
+        <div style="background-color: lightblue;">item1</div>
+        <div style="background-color: lightpink; ">item2</div>
+        <div style="background-color: lightblue; ">item3</div>
+        <div style="background-color: lightpink;">item4</div>
+      </div>
+
+      <div class="flex-header" style="height: 50px;">
+        <div style="background-color: lightblue; ">item1</div>
+        <div style="background-color: lightpink; ">item2</div>
+      </div>
+
+      <div class="notifications">
+        <div class="notification-text">Home
+          <div class="number-of-notifications">
+            14
+          </div>
+        </div>
+        <div class="notification-text">Notifications
+          <div class="number-of-notifications">
+            3
+          </div>
+        </div>
+        <div class="notification-text">Messages
+          <div class="number-of-notifications">
+            5
+          </div>
+        </div>
+      </div>
+
+      <div class="banner">
+        <div class="left">Home</div>
+        <div class="middle">
+          <input class="search-bar" type="text" placeholder="Search"/>
+        </div>
+        <div class="right">
+          <button>
+            Download
+          </button>
+        </div>
       </div>
     </div>
   </body>
