--- a/youtube.html
+++ b/youtube.html
@@ -3,6 +3,7 @@
   <head>
     <title>Youtube Practising v2</title>
     <link rel="stylesheet" href="yt.css" />
+    <link rel="stylesheet" href="header.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,7 +12,14 @@
     />
   </head>
   <body>
-    <input class="search-bar" type="text" placeholder="Search" />
+    <div class="header">
+      <div class="left-section"> left</div>
+      <div class="middle-section">
+        <input class="search-bar" type="text" placeholder="Search" />
+      </div>
+      <div class="right-section">right</div>
+    </div>
+    
 
     <div class="video-grid">
       <div class="video-preview">
