--- a/youtube.html
+++ b/youtube.html
@@ -13,11 +13,21 @@
   </head>
   <body>
     <div class="header">
-      <div class="left-section"> left</div>
+      <div class="left-section"> 
+        <img class="hamburger-menu" src="icons/hamburger-menu.svg"/>
+        <img class="yt-logo" src="icons/youtube-logo.svg"/>
+      </div>
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search" />
+        <button class="search-button"><img class="search-icon" src="icons/search.svg" /></button>
+        <button class="voice-search-button"><img class="voice-search-icon" src="icons/voice-search-icon.svg" /></button>
       </div>
-      <div class="right-section">right</div>
+      <div class="right-section">
+        <img class="upload" src="icons/upload.svg"/>
+        <img class="yt-apps" src="icons/youtube-apps.svg"/>
+        <img class="notifications" src="icons/notifications.svg"/>
+        <img class="my-channel-photo" src="icons/my-channel.jpeg"/>
+      </div>
     </div>
     
 
