--- a/index.html
+++ b/index.html
@@ -423,5 +423,97 @@
         </div>
       </div>
     </div>
+
+    <div class="position">
+      <div
+        style="
+          background-color: gray;
+          color: white;
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          height: 40px;
+        "
+      >
+        header
+      </div>
+
+      <div
+        style="
+          background-color: rgb(37, 37, 37);
+          color: white;
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          top: 40px;
+          width: 60px;
+        "
+      >
+        sidebar
+      </div>
+      <!--<div
+      style="
+        background-color: rgb(59, 59, 59);
+        color: white;
+        position: fixed;
+        left: 60px;
+        bottom: 0;
+        top: 40px;
+        width: 200px;
+      "
+    >
+      sidebar 2
+    </div> -->
+      <div
+        style="
+          background-color: rgba(0, 128, 0, 0.377);
+          color: white;
+          position: fixed;
+          right: 0;
+          bottom: 0;
+          top: 40px;
+          width: 100px;
+        "
+      >
+        right sidebar
+      </div>
+      <div
+        style="
+          background-color: black;
+          color: white;
+          position: fixed;
+          bottom: 20px;
+          right: 20px;
+        "
+      >
+        bottom-right
+      </div>
+      <div style="background-color: lightblue; height: 200px; width: 200px">
+        div1
+      </div>
+      <div style="background-color: lightpink; height: 200px; width: 200px">
+        div2
+      </div>
+      <!--
+      <div
+        style="
+          background-color: rgba(0, 0, 0, 0.8);
+          position: fixed;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;"
+      >
+        <div class="overlay">
+          <div style="font-size: 30px; font-weight: bold; margin-bottom: 12px;">Modal Title</div>
+          <div style="font-size: 20px; margin-bottom: 12px;">This is a modal</div>
+          <button style="font-size: 16px">Close</button>
+        </div> 
+      </div>-->
+    </div>
   </body>
 </html>
