--- a/youtube.html
+++ b/youtube.html
@@ -4,6 +4,7 @@
     <title>Youtube Practising v2</title>
     <link rel="stylesheet" href="yt.css" />
     <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="sidebar.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,6 +29,10 @@
         <img class="notifications" src="icons/notifications.svg"/>
         <img class="my-channel-photo" src="icons/my-channel.jpeg"/>
       </div>
+    </div>
+
+    <div class="sidebar">
+      sidebar
     </div>
     
 
@@ -161,8 +166,141 @@
             <p class="video-author">Markiplier</p>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
+        </div>        
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-1.webp"
+            alt="Zdjęcie osoby x i y"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-1.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views &#183; 6 months ago</p>
+          </div>
         </div>
       </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-2.webp"
+            alt="Zdjęcie osoby smiejącej się"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-2.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
+        </div>        
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-1.webp"
+            alt="Zdjęcie osoby x i y"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-1.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views &#183; 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-2.webp"
+            alt="Zdjęcie osoby smiejącej się"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-2.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
+        </div>        
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-1.webp"
+            alt="Zdjęcie osoby x i y"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-1.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Talking Tech and AI with Google CEO Sundar Pichai!
+            </p>
+            <p class="video-author">Marques Brownlee</p>
+            <p class="video-stats">3.4M views &#183; 6 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="img/thumbnail-2.webp"
+            alt="Zdjęcie osoby smiejącej się"
+          />
+        </div>
+
+        <div class="video-info-grid">
+          <div class="channel-photo">
+            <img class="profile-photo" src="img/channel-2.jpeg" />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
+        </div>        
+      </div>
+
     </div>
   </body>
 </html>
